Grammar fixes: dadamailproject.com/support/boards/viewtopic.php?t=4586&p=17188

--- a/dada/templates/adv_archive_options_screen.tmpl
+++ b/dada/templates/adv_archive_options_screen.tmpl
@@ -61,7 +61,7 @@
 			>
 
 		    <label for="stop_message_at_sig">
-				 Show Archived Messages without the Mailing List Template Applied
+				 Show archived messages without the Mailing List Template applied
 		    </label>
 	
 			<div class="alert-box info radius">
@@ -104,7 +104,7 @@
 			<!-- tmpl_if list_settings.style_quoted_archive_text -->checked="checked"<!--/tmpl_if-->
 			>
 		    <label for="style_quoted_archive_text">
-		     Style Quoted Message Text
+		     Style quoted message text
 		    </label>
 			<div class="alert-box info radius">
 			    <p>
@@ -125,7 +125,7 @@
 	   <div class="small-12 columns">   
 		   <input type="checkbox" name="disable_archive_js" id="disable_archive_js" value="1" <!-- tmpl_if list_settings.disable_archive_js -->checked="checked"<!--/tmpl_if-->  >
 		    <label for="disable_archive_js">
-				Disable Embedded JavaScript in Archived Messages
+				Disable embedded JavaScript in archived messages
 		    </label>
 			<div class="alert-box info radius">
 				<!-- tmpl_if can_use_html_scrubber -->     
@@ -144,7 +144,7 @@
 	   <div class="small-12 columns">       
 		    <input type="checkbox" name="display_attachments" id="display_attachments" value="1" <!-- tmpl_if list_settings.display_attachments -->checked="checked"<!--/tmpl_if-->  >
 		    <label for="display_attachments">
-				 Display Message Attachments
+				 Display message attachments
 		    </label>  
 			<!-- tmpl_unless can_display_attachments -->
 				<div class="alert-box alert radius">
@@ -158,7 +158,7 @@
 	   <div class="small-12 columns">       
 		    <input type="checkbox" name="html_archives_in_iframe" id="html_archives_in_iframe" value="1" <!-- tmpl_if list_settings.html_archives_in_iframe -->checked="checked"<!--/tmpl_if--> >
 		    <label for="html_archives_in_iframe">
-		     Show HTML Messages in an iFrame
+		     Show HTML messages in an iFrame
 		    </label>
 		</div> 
 	</div>
@@ -317,7 +317,7 @@
 	<div class="small-12 columns">       
 	    <input type="checkbox" name="publish_archives_rss" id="publish_archives_rss" value="1" <!-- tmpl_if list_settings.publish_archives_rss -->checked="checked"<!--/tmpl_if--> >
 	    <label for="publish_archives_rss">
-	     Publish Your Archives Index in RSS/Atom
+	     Publish your archives in RSS/Atom
 	    </label>
 	    <ul>      
 			<li>
@@ -338,7 +338,7 @@
 	<div class="small-12 columns">       
        <input type="checkbox" name="ping_archives_rss" id="ping_archives_rss" value="1" <!-- tmpl_if list_settings.ping_archives_rss -->checked="checked"<!--/tmpl_if--> >
        <label for="ping_archives_rss" <!-- tmpl_unless can_use_xml_rpc -->class="disabled"<!--/tmpl_unless-->>
-        Ping/Notify Site Update Services
+        Ping/Notify site update services
        </label>      
 		<!-- tmpl_if can_use_xml_rpc -->
 			<div class="alert-box info radius">
@@ -419,7 +419,7 @@ Gravatars
 			<!-- tmpl_if list_settings.enable_gravatars -->checked="checked"<!--/tmpl_if-->
 		>
 	    <label for="enable_gravatars">
-	     Enable Gravatar Icons
+	     Enable Gravatar icons
 	    </label>
 	</div> 
 </div>
