--- a/dada/templates/archive_options_screen.tmpl
+++ b/dada/templates/archive_options_screen.tmpl
@@ -50,7 +50,7 @@
 						value="1" 
 						<!-- tmpl_if list_settings.archive_messages -->checked="checked"<!--/tmpl_if-->
 					>
-					Archive Your Messages
+					Archive your messages
 			    </label>
 			</div>
 		</div>
@@ -82,7 +82,7 @@
 						value="1" 
 						<!-- tmpl_if list_settings.archives_available_only_to_subscribers -->checked="checked"<!--/tmpl_if-->
 					>
-					Only Allow Subscribers to View Archived Messages
+					Only allow subscribers to view archived messages
 				</label>
 
 				<!-- tmpl_unless PROFILE_ENABLED -->
@@ -104,7 +104,7 @@
 						value="1"
 						<!-- tmpl_if list_settings.archive_subscribe_form -->checked="checked"<!--/tmpl_if-->
 					>
-					Add a Subscription Form to the Archive Screens
+					Add a subscription form to the archive screens
 				</label>
 			</div>
 		</div>
@@ -120,7 +120,7 @@
 						value="1"
 						<!-- tmpl_if list_settings.archive_search_form -->checked="checked"<!--/tmpl_if-->
 					>
-					Add a Search Form to the Archive Screens
+					Add a search form to the archive screens
 				</label>
 			</div>
 		</div>
