--- a/dada/templates/drafts.tmpl
+++ b/dada/templates/drafts.tmpl
@@ -57,7 +57,7 @@
             <strong>
             Drafts
             </strong> 
-            are unfinished messages, that haven't been sent out. 
+            are unfinished messages that haven't been sent out. 
             Once a drafted message is sent out as a mass mailing, the draft message will also
             be removed.
         </p>
