--- a/dada/templates/mail_sending_advanced_options_screen.tmpl
+++ b/dada/templates/mail_sending_advanced_options_screen.tmpl
@@ -74,7 +74,7 @@
 						value="1" 
 						<!-- tmpl_if list_settings.mime_encode_words_in_headers -->checked="checked"<!--/tmpl_if-->
 					>		
-					Encode Message Headers
+					Encode message headers
 				</label>
 				<div class="alert-box info radius"> 
 					Non-ASCII characters will be specially encoded in the To, From, Cc and Subject headers. 
