--- a/dada/templates/mail_sending_options_screen.tmpl
+++ b/dada/templates/mail_sending_options_screen.tmpl
@@ -65,7 +65,7 @@
 					<!-- tmpl_if list_settings.add_sendmail_f_flag -->checked="checked"<!--/tmpl_if--> 
 				>
 			    <label for="add_sendmail_f_flag">
-			     Add the Sendmail '-f' flag when sending messages using 
+			     Add the sendmail '-f' flag when sending messages using 
 			     <!-- tmpl_var MAILPROG -->
 			    </label>
 				<!-- tmpl_if comment -->		
@@ -169,7 +169,7 @@
 						<!-- tmpl_if list_settings.set_smtp_sender -->checked="checked"<!-- /tmpl_if --> 
 					>
 					<label for="set_smtp_sender">
-						Set the Sender of SMTP Mailings to the List Administration Address
+						Set the sender of SMTP mailings to the List Administration address
 					</label>
 					<!-- tmpl_if comment -->
 						<div class="alert-box info radius">
