--- a/dada/templates/multiple_list_sending_widget.tmpl
+++ b/dada/templates/multiple_list_sending_widget.tmpl
@@ -49,7 +49,7 @@
 			 <input type="checkbox" name="multi_list_send_no_dupes" id="multi_list_send_no_dupes" value="1" checked="checked" >
 		
 			<label for="multi_list_send_no_dupes">
-			  Send Only One Message/Subscriber
+			  Send only one message/subscriber
 			 </label>
 			<br > 
 			Subscribers who have email addresses subscribed to more than one mailing list will receive only one copy of this message.
