--- a/dada/templates/plugins/bridge/default.tmpl
+++ b/dada/templates/plugins/bridge/default.tmpl
@@ -357,7 +357,7 @@
 						id="disable_discussion_sending" 
 						value="1" <!--tmpl_if list_settings.disable_discussion_sending -->checked="checked"<!--/tmpl_if-->
 					>
-					Disable Bridge
+					Disable <!-- tmpl_var Plugin_Name -->
 				</label>
 			</div>
 		</div>
