--- a/dada/templates/plugins/tracker/default.tmpl
+++ b/dada/templates/plugins/tracker/default.tmpl
@@ -213,7 +213,7 @@
 			<!-- tmpl_if list_settings.tracker_track_email -->checked="checked"<!--/tmpl_if -->
 		> 
 	    <label for="tracker_track_email"> 
-	     	Track with Email Addresses
+	     	Track with email addresses
 	    </label>
 			<div class="alert-box info radius"> 		
 				Message Clickthroughs, and Opens will also track the subscriber's email address. 
@@ -237,7 +237,7 @@
 							<!-- tmpl_if list_settings.tracker_update_profiles_w_geo_ip_data -->checked="checked"<!-- /tmpl_if -->
 						   >
 		                   <label for="tracker_update_profiles_w_geo_ip_data">
-		                       Update Profiles, after Opens/Clickthroughs
+		                       Update Profiles, after opens/clickthroughs
 		                   </label> 
 
 				   		<div class="small-1 columns ">
@@ -290,7 +290,7 @@
 				<!-- tmpl_if list_settings.tracker_clean_up_reports -->checked="checked"<!--/tmpl_if --> 
 			>
 		    <label for="tracker_clean_up_reports"> 
-				Clean Up Tracker Reports
+				Clean up Tracker reports
 		    </label> 
    		</div> 
    </div> 
@@ -305,7 +305,7 @@
 				<!-- tmpl_if list_settings.tracker_show_message_reports_in_mailing_monitor -->checked="checked"<!--/tmpl_if --> 
 			>
 		    <label for="tracker_show_message_reports_in_mailing_monitor"> 
-				Show Message Reports in Mailing Monitor
+				Show message reports in mailing monitor
 		    </label> 
    		</div> 
    </div> 
