--- a/dada/templates/profile_fields_screen.tmpl
+++ b/dada/templates/profile_fields_screen.tmpl
@@ -354,7 +354,7 @@
 						>
 				
 	                  <label for="field_required">
-						  Required
+						  required
 					  </label> 
 	             	</div> 
 	   			 </div>
