--- a/dada/templates/send_email_archive_options_widget.tmpl
+++ b/dada/templates/send_email_archive_options_widget.tmpl
@@ -43,7 +43,7 @@
 		<!-- /tmpl_if --> 
 
 		<label for="archive_no_send">
-			Only Archive, Don't Send
+			Only archive, don't send
 		</label>
 
 		<!-- tmpl_unless expr="(draft_role eq 'draft')" --> 
@@ -67,7 +67,7 @@
 				value="1" 
 			>
 			<label for="back_date">
-				Back Date:
+				Backdate:
 			</label>
 
 			<input 
