--- a/dada/templates/send_email_headers_widget.tmpl
+++ b/dada/templates/send_email_headers_widget.tmpl
@@ -109,7 +109,7 @@
 		 </div>   	  		
 		 <div class="small-11 columns">
 			 <label for="subject_from_title_tag">
-				 Use the Webpage's &lt;title&gt; as Message Subject 
+				 Use the Webpage's &lt;title&gt; as the message's Subject 
 			</label>   
  	     </div>
  	   </div> 
