--- a/dada/templates/send_url_email_screen.tmpl
+++ b/dada/templates/send_url_email_screen.tmpl
@@ -171,7 +171,7 @@
 										id="crop_html_content" value="1"
 									>
 									<label for="crop_html_content">
-										Crop Webpage, sending only content found in the tag with: 
+										Crop webpage, sending only content found in the tag with: 
 									</label>
 								</div>
 							</div>
@@ -236,7 +236,7 @@
 								<div class="small-12 columns">
 									<input type="radio" name="plaintext_content_from" id="plaintext_content_from_auto" value="auto" checked="checked" >
 									<label for="plaintext_content_from_auto">
-										Create a PlainText Version automatically
+										Create a PlainText version automatically
 									</label>
 								</div>
 							</div>
