--- a/dada/templates/sending_monitor_screen.tmpl
+++ b/dada/templates/sending_monitor_screen.tmpl
@@ -225,7 +225,7 @@
 				<br>
 				<br>
 			
-			     Last Message Sent: <!-- tmpl_var time_since_last_sendout --> ago. 
+			     Last message sent: <!-- tmpl_var time_since_last_sendout --> ago. 
 
 			    <!-- /tmpl_if --> 
     
@@ -234,7 +234,7 @@
     
 			    <!-- tmpl_unless is_paused -->     
 			        <!-- tmpl_if will_restart_in --> 
-			             Mailing Automatically Reloading in: <!-- tmpl_var will_restart_in -->
+			             Mass mailing automatically reloading in: <!-- tmpl_var will_restart_in -->
 			        <!-- /tmpl_if --> 
 			    <!-- /tmpl_unless --> 
 			</div>
