--- a/dada/templates/view_list_screen.tmpl
+++ b/dada/templates/view_list_screen.tmpl
@@ -48,7 +48,7 @@
 
 <div id="domain_break_down">
     <h1>Breakdown by Domain</h1>
-    <p>Selecting a domain will run a search, on the table above.</p> 
+    <p>Selecting a domain will run a search on the table above.</p> 
     <div id="domain_break_down_chart_loading"></div>
     <div id="domain_break_down_chart"></div> 
 </div>
