--- a/dada/templates/list_options_screen.tmpl
+++ b/dada/templates/list_options_screen.tmpl
@@ -161,7 +161,7 @@
             
           <input type="checkbox" name="closed_list" id="closed_list" value="1" <!-- tmpl_if list_settings.closed_list --> checked="checked" <!-- /tmpl_if --> >
           <label for="closed_list"> 
-              Disable All Subscriptions
+              Disable all subscriptions
           </label>
 	      <div id="closed_list_notice"> 		
 	          <div class="alert-box info radius">  
@@ -192,7 +192,7 @@
 					<!-- tmpl_unless list_settings.invite_only_list -->checked="checked"<!--/tmpl_unless-->
 				>
                 <label for="anyone_can_subscribe"> 
-                    Allow Anyone To Subscribe
+                    Allow anyone to subscribe
                 </label>
 				
 		        <div id="not_anyone_can_subscribe_options">
@@ -257,7 +257,7 @@
 							<!-- tmpl_if list_settings.skip_sub_confirm_if_logged_in -->checked="checked"<!--/tmpl_if-->
 						>
                        <label for="skip_sub_confirm_if_logged_in">
-                      	  Skip Subscription Confirmation Process if the subscriber already has a <!-- tmpl_var PROGRAM_NAME --> Profile
+                      	  Skip subscription confirmation if the subscriber already has a <!-- tmpl_var PROGRAM_NAME --> Profile
                        </label>
 	                   
 					   <div class="alert-box info radius">       
@@ -274,7 +274,7 @@
                      <div class="small-11 columns">                          
                         <input type="checkbox" name="limit_sub_confirm" id="limit_sub_confirm" value="1" <!-- tmpl_if list_settings.limit_sub_confirm -->checked="checked"<!--/tmpl_if--> >
                          <label for="limit_sub_confirm">
-                          Limit Subscription Confirmation Sending 
+                          Limit subscription confirmation sending 
                          </label>
 						 
 		                 <div class="alert-box info radius">                              
@@ -429,7 +429,7 @@
 						<!-- tmpl_if list_settings.captcha_sub -->checked="checked"<!--/tmpl_if--> 
 					>
                     <label for="captcha_sub" <!-- tmpl_unless can_use_captcha -->class="disabled"<!-- /tmpl_unless -->>
-                     Require Solving a CAPTCHA
+                     Require solving a CAPTCHA
                     </label>
 					
 					<div class="alert-box info radius">  
@@ -462,7 +462,7 @@
 						<!-- tmpl_if list_settings.enable_subscription_approval_step -->checked="checked"<!--/tmpl_if--> 
 					>
                      <label for="enable_subscription_approval_step">
-                       Require Approval from the List Owner 
+                       Require approval from the List Owner 
                      </label>
 					 
 					 <div class="alert-box info radius"> 
@@ -515,7 +515,7 @@
 			<div class="small-12 columns">		   	
               <input type="checkbox" name="get_sub_notice" id="get_sub_notice" value="1" <!-- tmpl_if list_settings.get_sub_notice -->checked="checked"<!--/tmpl_if--> >
                <label for="get_sub_notice">
-                Send Subscription Notifications to:
+                Send subscription notifications to:
                </label>
                <!-- tmpl_var send_subscription_notice_to_popup_menu -->
 			</div>
@@ -535,7 +535,7 @@
 			<div class="small-12 columns">
 	           <input type="checkbox" name="send_sub_success_email" id="send_sub_success_email" value="1" <!-- tmpl_if list_settings.send_sub_success_email -->checked="checked"<!--/tmpl_if--> >
                 <label for="send_sub_success_email">
-                 Send Subscription Successful Email Notifications
+                 Send Subscription Successful email notifications
                 </label>
      		    <div class="alert-box info radius"> 
 		            After a person subscribes, an email will be sent to them 
@@ -548,7 +548,7 @@
 				
 	          <input type="checkbox" name="send_newest_archive" id="send_newest_archive" value="1" <!-- tmpl_if list_settings.send_newest_archive -->checked="checked"<!--/tmpl_if--> >
                <label for="send_newest_archive">
-                Send the Newest Archived Message to All New Subscribers 
+                Send the Newest Archived Message to all new subscribers 
                </label>
      		   <div class="alert-box info radius"> 
 	        	   Visitors that sign up themselves will receive a copy of the last archived message after they complete the subscription process. 
@@ -622,7 +622,7 @@
 			
 	            <input type="checkbox" name="enable_mass_subscribe" id="enable_mass_subscribe" <!-- tmpl_if list_settings.enable_mass_subscribe -->checked="checked"<!-- /tmpl_if --> value="1" >     
 	            <label for="enable_mass_subscribe">
-	            Allow Subscriptions in the List Control Panel, Without Confirmation
+	            Allow subscriptions in the List Control Panel, without confirmation
 	           </label>      		
 			</div>
 		</div>
@@ -635,7 +635,7 @@
 				Only Allow when logged in with the Pro Dada Root Password
 			</label>
 	   	   <div class="alert-box info radius">  
-	   		   (Inviting Subscribers will always be available)
+	   		   (Inviting subscribers will always be available)
 	           </div
 		 </div>
 		</div>
@@ -646,7 +646,7 @@
   		 <div class="small-12  columns"> 
             <input type="checkbox" name="send_subscribed_by_list_owner_message" id="send_subscribed_by_list_owner_message" <!-- tmpl_if list_settings.send_subscribed_by_list_owner_message -->checked="checked"<!-- /tmpl_if --> value="1" >     
             <label for="send_subscribed_by_list_owner_message">
-             	Send a &quot;Welcome&quot; Message to Addresses Subscribed in the List Control Panel  
+             	Send a &quot;Welcome&quot; Message to addresses subscribed in the List Control Panel  
             </label>
 		 </div> 
 		</div>
@@ -655,7 +655,7 @@
   		 <div class="small-12  columns"> 
             <input type="checkbox" name="send_last_archived_msg_mass_mailing" id="send_last_archived_msg_mass_mailing" <!-- tmpl_if list_settings.send_last_archived_msg_mass_mailing -->checked="checked"<!-- /tmpl_if --> value="1" >     
             <label for="send_last_archived_msg_mass_mailing">
-             Send the Newest Archived Message to Addresses Subscribed in the List Control Panel
+             Send the newest archived message to addresses subscribed in the List Control Panel
            </label>
 		 </div> 
 		</div>
@@ -704,7 +704,7 @@
 					value="1" <!-- tmpl_if list_settings.unsub_show_email_hint -->checked="checked"<!--/tmpl_if -->
 				 >
 	        	 <label for="unsub_show_email_hint"> 
-	          	   Show Email Hint
+	          	   Show email hint
 	        	 </label>
 			</div>
 		</div>
@@ -778,7 +778,7 @@
 	
           <input type="checkbox" name="get_unsub_notice" id="get_unsub_notice" value="1" <!-- tmpl_if list_settings.get_unsub_notice -->checked="checked"<!--/tmpl_if --> >
            <label for="get_unsub_notice"> 
-            Send Unsubscription Notifications to:
+            Send Unsubscription Email notifications to:
            </label>
 		  </div>
 		 </div>
@@ -803,7 +803,7 @@
    			<div class="small-12  columns"> 		
 				<input type="checkbox" name="send_unsub_success_email" id="send_unsub_success_email" value="1" <!-- tmpl_if list_settings.send_unsub_success_email -->checked="checked"<!--/tmpl_if--> >
 		         <label for="send_unsub_success_email">
-		          Send Unsubscription Successful Email Notifications
+		          Send Unsubscription Successful email notifications
 		         </label>
 		 	   	<div class="alert-box info radius">   
 					 After a person unsubscribes, an email will be sent to them 
@@ -854,7 +854,7 @@
  		<div class="small-12  columns">
 			<input type="checkbox" name="send_unsubscribed_by_list_owner_message" id="send_unsubscribed_by_list_owner_message" <!-- tmpl_if list_settings.send_unsubscribed_by_list_owner_message -->checked="checked"<!-- /tmpl_if --> value="1" >     
 			<label for="send_unsubscribed_by_list_owner_message">
-				Send a &quot;Farewell&quot; Message to Addresses Unsubscribed in the List Control Panel
+				Send a &quot;farewell&quot; message to addresses unsubscribed in the List Control Panel
 			</label>
 		</div> 
 	</div>
@@ -863,7 +863,7 @@
  		<div class="small-12  columns">   
 		<input type="checkbox" name="send_admin_unsubscription_notice" id="send_admin_unsubscription_notice" <!-- tmpl_if list_settings.send_admin_unsubscription_notice -->checked="checked"<!-- /tmpl_if --> value="1" >     
 		<label for="send_admin_unsubscription_notice">
-		Send Email Notification to:
+		Send email notification to:
 		</label>
 		<!-- tmpl_var send_admin_unsubscription_notice_to_popup_menu -->
 	</div> 
@@ -895,7 +895,7 @@
 	 		<div class="small-12  columns">   
 			<input type="checkbox" name="mx_check" id="mx_check" value="1" <!-- tmpl_if list_settings.mx_check -->checked="checked"<!-- /tmpl_if --> >
 	         <label for="mx_check"  <!-- tmpl_unless can_use_mx_lookup -->class="disabled"<!--/tmpl_unless-->>
-	          Look Up Hostnames When Validating Email Addresses (MX Lookup)
+	          Look Up hostnames when validating email addresses (MX lookup)
 	         </label>
 
 		     <div class="alert-box info radius">  
