--- a/dada/templates/mass_mailing_options_screen.tmpl
+++ b/dada/templates/mass_mailing_options_screen.tmpl
@@ -40,7 +40,7 @@
 	                value="1" 
 	                <!-- tmpl_if list_settings.mass_mailing_convert_plaintext_to_html -->checked="checked"<!-- /tmpl_if --> 
 	             >
-                Convert PlainText-only Mass Email Messages to HTML
+                Convert PlainText-only mass email messages to HTML
             </label>
         </div>
     </div> 
