--- a/dada/templates/plugins/bounce_handler/default.tmpl
+++ b/dada/templates/plugins/bounce_handler/default.tmpl
@@ -67,14 +67,14 @@
 			<div class="small-12 columns">
 				<label for="test">
 				<input type="checkbox" name="test" id="test" value="bounces" >
-					Only Test Any Awaiting Messages
+					Only test any awaiting messages
 				</label>
 			</div>
 		</div> 
 		<div class="row">
 			<div class="small-12 columns">
 				<label for="parse_amount">
-					# Messages to Review:
+					# messages to review:
 				</label> 
 				<!-- tmpl_var parse_amount_widget -->
 			</div>
@@ -158,7 +158,7 @@
 				value="1"
 				<!-- tmpl_if list_settings.bounce_handler_forward_msgs_to_list_owner -->checked="checked"<!-- /tmpl_if -->
 			>
-			Forward bounces to the List Owner After Processing
+			Forward bounces to the List Owner after processing
 		</label>
 	</div>
 </div> 
@@ -166,7 +166,7 @@
 <div class="row">
 	<div class="small-12 columns">
 		<label>
-			Addresses the reach the Bounce Score Threshold Should:
+			Addresses the reach the Bounce Score Threshold should:
 		</label>
 	</div>
 </div>
@@ -181,7 +181,7 @@
 				value="unsub_subscriber" 
 				<!-- tmpl_if expr="(list_settings.bounce_handler_when_threshold_reached eq 'unsub_subscriber')" -->checked="checked"<!-- /tmpl_if -->
 			>
-				Be Unsubscribed Right Away
+				Be unsubscribed right away
 		</label>
 	</div> 
 </div> 
@@ -195,7 +195,7 @@
 			value="move_to_bounced_sublist" 
 			<!-- tmpl_if expr="(list_settings.bounce_handler_when_threshold_reached eq 'move_to_bounced_sublist')" -->checked="checked"<!-- /tmpl_if -->
 		>
-			Be Moved to the, Bounced Addresses Sublist
+			Be moved to the, Bounced Addresses sublist
 		</label>
 	</div> 
 </div> 
