--- a/dada/templates/view_list_viewport_widget.tmpl
+++ b/dada/templates/view_list_viewport_widget.tmpl
@@ -37,7 +37,7 @@
         <!-- tmpl_else -- >
             
             <p>
-             There are currently no members of, <!-- tmpl_var type_title -->.
+             There are currently no members of <!-- tmpl_var type_title -->.
                 <!-- tmpl_if EXPR="((type eq 'list') || (type eq 'black_list') || (type eq 'authorized_senders') || (type eq 'moderators') || (type eq 'white_list'))" -->
         
                     <a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=add&amp;type=<!-- tmpl_var type -->">
