This last screen still needs a little work...

--- a/dada/installer-disabled/templates/installer_install_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_install_dada_mail_scrn.tmpl
@@ -58,10 +58,10 @@
      This cronjob makes sure that things like the Mailing Monitor, Scheduled Mass Mailing, Bounce Handler, and Bridge function properly: 
  </p>
  
- <div data-alert class="alert-box success radius"> style="width:90%"> 
-     <h1>
+ <div data-alert class="alert-box success radius">
+     <h4>
          <!-- tmpl_var S_PROGRAM_URL -->/<!-- tmpl_var scheduled_jobs_flavor escape="HTML" -->/_all/_all/_silent/
-     </h1> 
+     </h4> 
  </div> 
  <p> 
      Set this URL to be fetched by a scheduled task (cronjob) on a recurring schedule (~5 minutes)
@@ -117,7 +117,7 @@
 
 <form action="<!-- tmpl_var submitted_PROGRAM_URL -->"> 
 	<div class="text-center"> 
-		<input type="submit" class="processing bigger_button" value="&#187; Start Working With  <!-- tmpl_var PROGRAM_NAME -->! &#171;" />
+		<input type="submit" class="processing large button" value="&#187; Start Working With  <!-- tmpl_var PROGRAM_NAME -->! &#171;" />
 	</div>	
 </form>
 
