Making the list control panel breadcrumbs invisible on small, adding a list switcher to the off canvas menu adding a log out button to the off canvas menu

--- a/dada/installer-disabled/templates/installer_install_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_install_dada_mail_scrn.tmpl
@@ -6,6 +6,10 @@
 <div id="installer_install_dada_mail"></div> 
 
 
+	<div class="row">
+		<div class="small-12 medium-8 large-8 medium-centered large-centered columns">
+
+
 <fieldset> 
 <legend>
 	Installation Log:
@@ -135,6 +139,8 @@
 	
 <!-- /tmpl_if -->
 
+</div> 
+</div> 
 
 <!-- tmpl_include install_debug_info_widget.tmpl --> 
 
