--- a/dada/templates/add_screen.tmpl
+++ b/dada/templates/add_screen.tmpl
@@ -3,7 +3,7 @@
 <!-- tmpl_set name="title" value="Membership &#187; Invite/Add" -->
 <!-- tmpl_set name="load_linedtextarea" value="1" --> 
 
-<div class="row">
+<div class="row hide-for-small-only" id="control_panel_breadcrumbs">
 	<div class="medium-10 small-9 columns">
 	   	<nav class="breadcrumbs">	
 			<a href="#">
