--- a/dada/templates/delete_list_screen.tmpl
+++ b/dada/templates/delete_list_screen.tmpl
@@ -5,7 +5,7 @@
 <div id="delete_list_screen"></div> 
 
 
-<div class="row">
+<div class="row hide-for-small-only" id="control_panel_breadcrumbs">
 	<div class="medium-10 small-9 columns">
 	   	<nav class="breadcrumbs">	
 		 	 <a href="#" class="unavailable">
@@ -42,7 +42,7 @@
     
         <ul class="button-group right">    
             <li>
-                <input type="submit" class="button alertive" value="Delete Your Mailing List (<!-- tmpl_var name="list_settings.list_name" ESCAPE="HTML" -->)" >
+                <input type="submit" class="button alert" value="Delete Your Mailing List (<!-- tmpl_var name="list_settings.list_name" ESCAPE="HTML" -->)" >
             </li>
         </ul>
     </fieldset>
