--- a/dada/templates/drafts.tmpl
+++ b/dada/templates/drafts.tmpl
@@ -2,7 +2,7 @@
 
 <!-- tmpl_set name="title" value="Mass Mailing &#187; Drafts/Stationery/Schedules" -->
 
-<div class="row">
+<div class="row hide-for-small-only" id="control_panel_breadcrumbs">
 	<div class="medium-10 small-9 columns">
 	   	<nav class="breadcrumbs">	
 		 	 <a href="#" class="unavailable">
