--- a/dada/templates/edit_type_screen.tmpl
+++ b/dada/templates/edit_type_screen.tmpl
@@ -4,7 +4,7 @@
 <!-- tmpl_set name="title" value="Appearance and Templates &#187; Email Message Templates" -->
 <div id="screen_meta" data-menu_highlight="edit_type"></div>
 
-<div class="row">
+<div class="row hide-for-small-only" id="control_panel_breadcrumbs">
 	<div class="medium-10 small-9 columns">
 	   	<nav class="breadcrumbs">	
 		 	 <a href="#" class="unavailable">
@@ -929,7 +929,7 @@
 			<input type="reset" class="cautionary button" value="Clear All Changes" >
 		</li>
 		<li>	
-			<input type="submit" class="alertive button" name="revert" value="Revert ALL Text to Defaults" onclick="return revertEditType(this.form);" >
+			<input type="submit" class="alert button" name="revert" value="Revert ALL Text to Defaults" onclick="return revertEditType(this.form);" >
 		</li>
 	</ul>
 
