--- a/dada/templates/plugins/password_protect_directories/default.tmpl
+++ b/dada/templates/plugins/password_protect_directories/default.tmpl
@@ -1,6 +1,6 @@
 <!-- tmpl_set name="title" value="Plugins &#187; Password Protect Directories" --> 
 
-<div class="row">
+<div class="row hide-for-small-only" id="control_panel_breadcrumbs">
 	<div class="medium-10 small-9 columns">
 	   	<nav class="breadcrumbs">	
 		 	 <a href="#" class="unavailable">
@@ -84,7 +84,7 @@
 				<input type="hidden" name="prm" value="delete_dir" > 
 				<input type="hidden" name="id" value="<!-- tmpl_var id -->" > 
 	
-				<input type="submit" class="alertive button" value="Delete " >
+				<input type="submit" class="alert button" value="Delete " >
 					</form> 
 		
 					</div>
