--- a/dada/templates/plugins/tracker/clickthrough_table.tmpl
+++ b/dada/templates/plugins/tracker/clickthrough_table.tmpl
@@ -145,7 +145,7 @@
 		<input 
 			type="button" 
 			name="" value="[x]" 
-			class="button small alertive tracker_delete_msg_id_data" 
+			class="button small alert tracker_delete_msg_id_data" 
 			data-mid="<!-- tmpl_var mid -->" 
 		>  		
 	</form> 
