--- a/dada/templates/plugins/tracker/default.tmpl
+++ b/dada/templates/plugins/tracker/default.tmpl
@@ -92,7 +92,7 @@
 	</li>
 	<li>
 		<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post">
-			<input type="button" value="Purge ALL Clickthrough Logs" class="button small alertive tracker_purge_log">
+			<input type="button" value="Purge ALL Clickthrough Logs" class="button small alert tracker_purge_log">
 		</form> 
 	</li>
 </ul>
