--- a/dada/templates/profile_fields_screen.tmpl
+++ b/dada/templates/profile_fields_screen.tmpl
@@ -227,7 +227,7 @@
 				             <input type="hidden" name="flavor" value="profile_fields" > 
 				             <input type="hidden" name="process" value="delete_field" > 
 				             <input type="hidden" name="field"  value="<!-- tmpl_var field -->" > 
-				            <input type="submit" value="&#8855;" class="button small alertive"  onclick="return removeSubscriberField(this.form);" > 
+				            <input type="submit" value="&#8855;" class="button small alert"  onclick="return removeSubscriberField(this.form);" > 
 				            </form> 
 						</li>
 					</ul>
