--- a/dada/templates/profile_home.tmpl
+++ b/dada/templates/profile_home.tmpl
@@ -413,7 +413,7 @@
                 </p> 
 
                 <div class="buttonfloat">    
-                <input type="submit" value="Delete Your Profile" class="alertive button" onclick="return confirm_profile_removal(this.form);" > 
+                <input type="submit" value="Delete Your Profile" class="alert button" onclick="return confirm_profile_removal(this.form);" > 
                 </div>
                 <div class="floatclear"></div>
             </form>
