--- a/dada/templates/restore_lists_screen.tmpl
+++ b/dada/templates/restore_lists_screen.tmpl
@@ -11,7 +11,7 @@
 
 <input type="password" name="root_password" > 
  
-<input type="submit" value="Continue..." class="alertive button" >
+<input type="submit" value="Continue..." class="alert button" >
 
 <p><strong>No</strong> Changes will be made to your list files by clicking, &quot;Continue&quot;.</p>
 </form> 
