--- a/dada/templates/send_email_file_attachments_widget.tmpl
+++ b/dada/templates/send_email_file_attachments_widget.tmpl
@@ -26,7 +26,7 @@
 		
 				<button type="button" name="attachment1_button" id="attachment1_button" value=""  data-attachment="attachment1" class="kcfinder_open">Select a File...</button>
 				<input  type="hidden" name="attachment1"        id="attachment1"        value="" > 
-				<input type="button" value="[x]"  class="button remove_attachment alertive" id="attachment1_remove_button" data-attachment="attachment1" >
+				<input type="button" value="[x]"  class="button remove_attachment alert" id="attachment1_remove_button" data-attachment="attachment1" >
 			</div>
 		</div>
 
@@ -34,7 +34,7 @@
 		   <div class="small-12 columns">	
 				<button type="button" name="attachment2_button" id="attachment2_button" value=""  data-attachment="attachment2" class="kcfinder_open">Select a File...</button>
 				<input  type="hidden" name="attachment2"        id="attachment2"        value="" > 
-				<input type="button" value="[x]"  class="button remove_attachment alertive" id="attachment2_remove_button" data-attachment="attachment2" >
+				<input type="button" value="[x]"  class="button remove_attachment alert" id="attachment2_remove_button" data-attachment="attachment2" >
 			</div>
 		</div>
 		
@@ -42,14 +42,14 @@
 		   <div class="small-12 columns">	
 				<button type="button" name="attachment3_button" id="attachment3_button" value=""  data-attachment="attachment3" class="kcfinder_open">Select a File...</button>
 				<input  type="hidden" name="attachment3"        id="attachment3"        value="" > 
-				<input type="button" value="[x]"  class="button remove_attachment alertive" id="attachment3_remove_button" data-attachment="attachment3" >
+				<input type="button" value="[x]"  class="button remove_attachment alert" id="attachment3_remove_button" data-attachment="attachment3" >
 			</div>
 		</div>
 		<div class="row">
 		   <div class="small-12 columns">	
 			<button type="button" name="attachment4_button" id="attachment4_button" value=""  data-attachment="attachment4" class="kcfinder_open">Select a File...</button>
 			<input  type="hidden" name="attachment4"        id="attachment4"        value="" > 
-			<input type="button" value="[x]"  class="button remove_attachment alertive" id="attachment4_remove_button" data-attachment="attachment4" >
+			<input type="button" value="[x]"  class="button remove_attachment alert" id="attachment4_remove_button" data-attachment="attachment4" >
 			</div>
 		</div>
 		
@@ -58,7 +58,7 @@
 	
 			<button type="button" name="attachment5_button" id="attachment5_button" value=""  data-attachment="attachment5" class="kcfinder_open">Select a File...</button>
 			<input  type="hidden" name="attachment5"        id="attachment5"        value="" > 
-			<input type="button" value="[x]"  class="button remove_attachment alertive" id="attachment5_remove_button" data-attachment="attachment5" >
+			<input type="button" value="[x]"  class="button remove_attachment alert" id="attachment5_remove_button" data-attachment="attachment5" >
 			</div>
 		</div>
 	
