--- a/dada/templates/setup_info_screen.tmpl
+++ b/dada/templates/setup_info_screen.tmpl
@@ -2,7 +2,7 @@
 <!-- tmpl_set name="show_profile_widget" value="0" -->
 <!-- tmpl_set name="title" value="App Information &#187; Configuration" -->
 
-<div class="row">
+<div class="row hide-for-small-only" id="control_panel_breadcrumbs">
 	<div class="medium-10 small-9 columns">
 	   	<nav class="breadcrumbs">	
 		 	 <a href="#" class="unavailable">
