--- a/dada/templates/back_link_screen.tmpl
+++ b/dada/templates/back_link_screen.tmpl
@@ -3,7 +3,7 @@
 <div id="screen_meta" data-menu_highlight="back_link"></div>
 <!-- tmpl_set name="title" value="Appearance and Templates &#187; Create a Back Link" -->
 
-<div class="row">
+<div class="row hide-for-small-only" id="control_panel_breadcrumbs">
 	<div class="medium-10 small-9 columns">
 	   	<nav class="breadcrumbs">	
 		 	 <a href="#" class="unavailable">
