--- a/dada/templates/change_password_screen.tmpl
+++ b/dada/templates/change_password_screen.tmpl
@@ -8,7 +8,7 @@
 <div id="screen_meta" data-menu_highlight="change_password"></div>
 <div id="change_password"></div>
 
-<div class="row">
+<div class="row hide-for-small-only" id="control_panel_breadcrumbs">
 	<div class="medium-10 small-9 columns">
 	   	<nav class="breadcrumbs">	
 		 	 <a href="#" class="unavailable">
