--- a/dada/templates/edit_template_screen.tmpl
+++ b/dada/templates/edit_template_screen.tmpl
@@ -3,7 +3,7 @@
 <!-- tmpl_set name="title" value="Appearance and Templates &#187; Your Mailing List Template" -->
 <div id="screen_meta" data-menu_highlight="edit_template"></div>
 
-<div class="row">
+<div class="row hide-for-small-only" id="control_panel_breadcrumbs">
 	<div class="medium-10 small-9 columns">
 	   	<nav class="breadcrumbs">	
 		 	 <a href="#" class="unavailable">
@@ -207,7 +207,7 @@
 		<li>   
 		   <input 
 		   		type="button"
-				class="alertive button"
+				class="alert button"
 				value="Revert to Default"
 				onclick="set_to_default();"
 			>
