--- a/dada/templates/list_activity_screen.tmpl
+++ b/dada/templates/list_activity_screen.tmpl
@@ -4,7 +4,7 @@
 <!-- tmpl_set name="load_google_viz" value="1" -->
 
 
-<div class="row">
+<div class="row hide-for-small-only" id="control_panel_breadcrumbs">
 	<div class="medium-10 small-9 columns">
 	   	<nav class="breadcrumbs">	
 		 	 <a href="#" class="unavailable">
