--- a/dada/templates/mailing_sending_mass_mailing_options_screen.tmpl
+++ b/dada/templates/mailing_sending_mass_mailing_options_screen.tmpl
@@ -8,7 +8,7 @@
 
 
 <!-- tmpl_set name="title" value="Mail Sending &#187; Mass Mailing Options" -->
-<div class="row">
+<div class="row hide-for-small-only" id="control_panel_breadcrumbs">
 	<div class="medium-10 small-9 columns">
 	   	<nav class="breadcrumbs">	
 		 	 <a href="#" class="unavailable">
