--- a/dada/templates/mass_mailing_options_screen.tmpl
+++ b/dada/templates/mass_mailing_options_screen.tmpl
@@ -3,7 +3,7 @@
 <!-- tmpl_set name="title" value="Mass Mailing &#187; Options" -->
 <div id="screen_meta" data-menu_highlight="mass_mailing_options"></div>
 
-<div class="row">
+<div class="row hide-for-small-only" id="control_panel_breadcrumbs">
 	<div class="medium-10 small-9 columns">
 	   	<nav class="breadcrumbs">	
 		 	 <a href="#" class="unavailable">
