--- a/dada/templates/plugins/bounce_handler/default.tmpl
+++ b/dada/templates/plugins/bounce_handler/default.tmpl
@@ -2,7 +2,7 @@
 <!-- tmpl_set name="title" value="Plugins &#187; Bounce Handler" -->	
 <div id="screen_meta" data-menu_highlight="bounce_handler"></div>
 
-<div class="row">
+<div class="row hide-for-small-only" id="control_panel_breadcrumbs">
 	<div class="medium-10 small-9 columns">
 	   	<nav class="breadcrumbs">	
 		 	 <a href="#" class="unavailable">
