--- a/dada/templates/plugins/bounce_handler/scorecard.tmpl
+++ b/dada/templates/plugins/bounce_handler/scorecard.tmpl
@@ -77,7 +77,7 @@
 		    <li>
 				<input 
 					type="submit" 
-					class="alertive button" 
+					class="alert button" 
 					onclick="if(!confirm('Are you sure you want to Erase the Bounce Scorecard? This cannot be undone.')){alert('Scorecard Not Erased.');return false;}" 
 					name="process" 
 					value="Erase Score Card"
