--- a/dada/templates/plugins/bridge/edit_email_msgs.tmpl
+++ b/dada/templates/plugins/bridge/edit_email_msgs.tmpl
@@ -3,7 +3,7 @@
 <div id="screen_meta" data-menu_highlight="bridge"></div>
 
 
-<div class="row">
+<div class="row hide-for-small-only" id="control_panel_breadcrumbs">
 	<div class="medium-10 small-9 columns">
 	   	<nav class="breadcrumbs">	
 		 	 <a href="#" class="unavailable">
@@ -517,7 +517,7 @@ Message Too Big Message
 			<input type="reset" class="cautionary button" value="Clear All Changes">
 		</li>
 		<li>
-			<input type="submit" class="alertive button" name="revert" value="Revert ALL Text to Defaults">
+			<input type="submit" class="alert button" name="revert" value="Revert ALL Text to Defaults">
 		</li>
 		<li>
 			<input type="submit" class="processing button" value="Save All Changes">
