--- a/dada/templates/plugins/change_list_shortname/default.tmpl
+++ b/dada/templates/plugins/change_list_shortname/default.tmpl
@@ -2,7 +2,7 @@
 
 <div id="screen_meta" data-menu_highlight="change_list_shortname"></div>
 
-<div class="row">
+<div class="row hide-for-small-only" id="control_panel_breadcrumbs">
 	<div class="medium-10 small-9 columns">
 	   	<nav class="breadcrumbs">	
 		 	 <a href="#" class="unavailable">
@@ -53,7 +53,7 @@
 				type="button" 
 				id="verify_button" 
 				value="Verify ..." 
-				class="alertive button"
+				class="alert button"
 			> 
 		</li>
 	</ul>
