--- a/dada/templates/plugins/shared/plugin_config.tmpl
+++ b/dada/templates/plugins/shared/plugin_config.tmpl
@@ -1,7 +1,7 @@
 <!-- tmpl_set name="title" value="Plugin Configuration" --> 
 <div id="screen_meta" data-menu_highlight="bridge"></div>
 
-<div class="row">
+<div class="row hide-for-small-only" id="control_panel_breadcrumbs">
 	<div class="medium-10 small-9 columns">
 	   	<nav class="breadcrumbs">	
 		 	 <a href="#" class="unavailable">
