--- a/dada/templates/scheduled_jobs.tmpl
+++ b/dada/templates/scheduled_jobs.tmpl
@@ -1,7 +1,7 @@
 <!-- begin scheduled_jobs.tmpl -->
 <!-- tmpl_set name="title" value="Scheduled Jobs" -->
 
-<div class="row">
+<div class="row hide-for-small-only" id="control_panel_breadcrumbs">
 	<div class="medium-10 small-9 columns">
 	   	<nav class="breadcrumbs">	
 		 	 <a href="#" class="unavailable">
