--- a/dada/templates/send_url_email_screen.tmpl
+++ b/dada/templates/send_url_email_screen.tmpl
@@ -6,7 +6,7 @@
 <!-- tmpl_set name="load_wysiwyg_editor" value="1" -->
 <!-- tmpl_set name="load_datetimepicker" value="1" -->
 
-<div class="row">
+<div class="row hide-for-small-only" id="control_panel_breadcrumbs">
 	<div class="medium-10 small-9 columns">
 	   	<nav class="breadcrumbs">	
 		 	 <a href="#" class="unavailable">
