--- a/dada/templates/view_archive_screen.tmpl
+++ b/dada/templates/view_archive_screen.tmpl
@@ -3,7 +3,7 @@
 <!-- tmpl_set name="title" value="Message Archives &#187; View Archive" -->
 <div id="screen_meta" data-menu_highlight="view_archive"></div>
 
-<div class="row">
+<div class="row hide-for-small-only" id="control_panel_breadcrumbs">
 	<div class="medium-10 small-9 columns">
 	   	<nav class="breadcrumbs">	
 		 	 <a href="#" class="unavailable">
@@ -51,7 +51,7 @@
 			<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="get"> 
 				<input type="hidden" name="flavor" value="delete_archive" > 
 				<input type="hidden" name="address" value="<!-- tmpl_var id -->" >
-				<input type="submit" class="alertive button" value="Delete Message" >    
+				<input type="submit" class="alert button" value="Delete Message" >    
 			 </form>
 	 	</li>
 		
