--- a/dada/templates/list_unsubscribe.tmpl
+++ b/dada/templates/list_unsubscribe.tmpl
@@ -1,77 +1,104 @@
 <!-- begin list_unsubscribe.tmpl --> 
 
+
+<div id="list_unsubscribe"></div>
 <!-- tmpl_if list_settings.private_list --> 
-	<h1>Request Unsubscription From <!-- tmpl_var list_settings.list_name --></h1>
+	<h3>Request Unsubscription From <!-- tmpl_var list_settings.list_name --></h3>
 <!-- tmpl_else --> 
-	<h1>Unsubscribe From <!-- tmpl_var list_settings.list_name --></h1>
+	<h3>Unsubscribe From <!-- tmpl_var list_settings.list_name --></h3>
 <!-- /tmpl_if --> 
 
 <!-- tmpl_if list_exists --> 
 
-	<!-- tmpl_if expr="((process == 1) && (is_valid == 0))" --> 
-	<div class="alert-box info radius"> 
-	<!-- tmpl_if list_settings.private_list --> 
-    <p><strong>Problems with Unsubscription Request</strong>	
-	<!-- tmpl_else --> 
-	    <p><strong>Problems with Unsubscription</strong>
-	<!-- /tmpl_if --> 
-	
-		<p>
-			Please make sure you're entering the correct email address that is subscribed, below. 
-		</p>
-	
-		<p>To be manually removed from this mailing list, please email the List Owner at:</p> 
-		<p class="text-center">
-			<strong>
-				<a href="mailto:<!-- tmpl_var list_settings.list_owner_email -->?Subject=Unsubscription%20Request%20from%20<!-- tmpl_var list_settings.list_name escape=URL -->">
-					<!-- tmpl_var list_settings.list_owner_email -->
-				</a>
-			</strong>
-		</p>	
-	</div>  
-
-	<!-- /tmpl_if -->
-
-
-	<fieldset> 
-		
-	<!-- tmpl_if list_settings.unsub_show_email_hint --> 
-	    <div class="text-center">
-		    <h1>Address Hint: <!-- tmpl_var email_hint --></h1> 
-	    </div> 
-	<!-- /tmpl_if -->
-	
-	<p>
-		Please enter your 
-			<label for="email">
-				email address
-			</label>
-		that is currently Subscribed, below:
-	</p> 
-
-	<form action="<!-- tmpl_var PROGRAM_URL -->" method="post" id="unsubscription_form" > 
-		<input type="hidden" id="flavor" name="flavor" value="u" >
-		<input type="hidden" id="token" name="token" value="<!-- tmpl_var token  escape="HTML" -->" > 
-		<input type="hidden" id="process" name="process" value="1" > 
-		<input type="text"   id="email" name="email" value="<!-- tmpl_var email escape="HTML" -->" style="font-size:1.5em" >
-		<!-- tmpl_if list_settings.private_list --> 
-			<input type="submit" value="Request Unsubscription" class="processing button" style="font-size:1.5em" > 
-		<!-- tmpl_else --> 
-			<input type="submit" value="Unsubscribe" class="processing button"  style="font-size:1.5em" >
-		<!-- /tmpl_if -->
-	</form> 
-
-	</fieldset> 
-	
-	
-    <div class="buttonfloat" style="margin-top:50px"> 
-        <form action="<!-- tmpl_var PROGRAM_URL -->" method="post" id="report_abuse_form" > 
-    		<input type="hidden" name="flavor" value="report_abuse" >
-    		<input type="hidden" id="report_abuse_token" name="report_abuse_token" value="<!-- tmpl_var report_abuse_token  escape="HTML" -->" > 
-		or, <input type="submit" class="quiet" value="Report Abuse...">
-	    </form> 
+	<div id="automatic_attempt_message" style="display:none">
+		<h1>Working on your request...<h1>
 	</div>
-	<div class="floatclear"></div> 
+	<div id="unsubscription_form">
+		<div class="row">
+			<div class="small-12 medium-8 large-8 medium-centered large-centered columns">
+	
+				<!-- tmpl_if expr="((process == 1) && (is_valid == 0))" --> 
+				<div class="alert-box info radius"> 
+				<!-- tmpl_if list_settings.private_list --> 
+			    <p><strong>Problems with Unsubscription Request</strong>	
+				<!-- tmpl_else --> 
+				    <p><strong>Problems with Unsubscription</strong>
+				<!-- /tmpl_if --> 
+	
+					<p>
+						Please make sure you're entering the correct email address that is subscribed, below. 
+					</p>
+	
+					<p>To be manually removed from this mailing list, please email the List Owner at:</p> 
+					<p class="text-center">
+						<strong>
+							<a href="mailto:<!-- tmpl_var list_settings.list_owner_email -->?Subject=Unsubscription%20Request%20from%20<!-- tmpl_var list_settings.list_name escape=URL -->">
+								<!-- tmpl_var list_settings.list_owner_email -->
+							</a>
+						</strong>
+					</p>	
+				</div>  
+
+				<!-- /tmpl_if -->
+
+
+				<div class="panel"> 
+					<div class="row">
+						<div class="small-12 columns">
+							<!-- tmpl_if list_settings.unsub_show_email_hint --> 
+							    <div class="text-center">
+								    <h4>Address Hint: <!-- tmpl_var email_hint --></h4> 
+							    </div> 
+							<!-- /tmpl_if -->
+						</div>
+					</div> 
+					<div class="row">
+						<div class="small-12 columns">				
+							<label for="email">
+								Please enter your email address that is currently Subscribed, below:
+							</label> 
+						</div>
+					</div> 
+					<div class="row">
+						<div class="small-12 columns">
+							<form action="<!-- tmpl_var PROGRAM_URL -->" method="post" id="unsubscription_form" > 
+							
+								<input type="hidden" id="program_url"  name="program_url" value="<!-- tmpl_var PROGRAM_URL -->" >
+								<input type="hidden" id="flavor"  name="flavor" value="u" >
+								<input type="hidden" id="token"   name="token" value="<!-- tmpl_var token  escape="HTML" -->" > 
+								<input type="hidden" id="process" name="process" value="1" > 
+								<input type="hidden" id="auto_attempted" name="auto_attempted" value="<!-- tmpl_var auto_attempted escape="HTML" -->">
+								<input type="hidden" id="one_click_unsubscribe" name="one_click_unsubscribe" value="<!-- tmpl_var list_settings.one_click_unsubscribe -->">
+								<input type="text"   id="email"   name="email" value="<!-- tmpl_var email escape="HTML" -->">
+						</div>
+					</div>
+					<div class="row">
+						<div class="small-12 columns">				
+							<!-- tmpl_if list_settings.private_list --> 
+								<input type="submit" value="Request Unsubscription" class="processing button"> 
+							<!-- tmpl_else --> 
+								<input type="submit" value="Unsubscribe" class="processing large button expand">
+							<!-- /tmpl_if -->
+						</div> 
+					</div>
+				</form> 
+
+				</div> 
+			</div>
+		</div> 
+	
+	    <div style="margin-top:50px"> 
+	        <div class="clearfix">
+				<div class="right">
+					<form action="<!-- tmpl_var PROGRAM_URL -->" method="post" id="report_abuse_form" > 
+			    		<input type="hidden" name="flavor" value="report_abuse" >
+			    		<input type="hidden" id="report_abuse_token" name="report_abuse_token" value="<!-- tmpl_var report_abuse_token  escape="HTML" -->" > 
+					or, <input type="submit" class="small button" value="Report Abuse...">
+				</form>
+				</div>
+			</div> 
+		</div>
+	</div>
 	
 <!-- tmpl_else --> 
 	
