I suspect this won't help with responsiveness the way I want it to, but we'll see.

--- a/dada/installer-disabled/templates/tinymce_config_js.tmpl
+++ b/dada/installer-disabled/templates/tinymce_config_js.tmpl
@@ -69,7 +69,7 @@ tinymce.init({
      visualblocks_default_state: true,
     
     plugins: [
-        "advlist autolink lists link image charmap preview hr anchor ",
+        "autoresize advlist autolink lists link image charmap preview hr anchor ",
         "searchreplace wordcount visualblocks visualchars code fullscreen",
         "nonbreaking table contextmenu directionality",
         "emoticons paste textcolor fullpage"
