--- a/dada/templates/edit_type_screen.tmpl
+++ b/dada/templates/edit_type_screen.tmpl
@@ -4,7 +4,7 @@
 <!-- tmpl_set name="title" value="Appearance and Templates &#187; Email Message Templates" -->
 <div id="screen_meta" data-menu_highlight="edit_type"></div>
 
-<div class="row hide-for-large-only" id="control_panel_breadcrumbs">
+<div class="row hide-for-small-only" id="control_panel_breadcrumbs">
 	<div class="medium-10 large-9 columns">
 	   	<nav class="breadcrumbs">	
 		 	 <a href="#" class="unavailable">
