--- a/dada/templates/profile_fields_screen.tmpl
+++ b/dada/templates/profile_fields_screen.tmpl
@@ -5,22 +5,46 @@
 
 <div id="screen_meta" data-menu_highlight="profile_fields"></div>
 
-<div id="screentitle"> 
-	<div id="screentitlepadding">
-		Profiles
-		 &#187;
-		<!-- tmpl_if edit_field --> 
-			<a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=profile_fields"> 
-			Profile Fields
-			</a>
-			 &#187; 
-		 <!-- tmpl_var field -->
-		<!-- tmpl_else --> 
-			Profile Fields
-		<!-- /tmpl_if -->
-	</div> 
-	<!-- tmpl_include help_link_widget.tmpl -->
+<div class="row hide-for-small-only" id="control_panel_breadcrumbs">
+	<div class="medium-10 large-9 columns">
+	   	<nav class="breadcrumbs">	
+		 	 <a href="#" class="unavailable">
+				Profiles
+			 </a>
+			
+			<!-- tmpl_if edit_field --> 
+	 	 	    
+		 	    <a 
+					href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=profile_fields"
+				>	
+					Profile Fields
+				</a>
+				
+				<a 
+	 				href="#"
+	 				class="current"
+	 			>	
+				 <!-- tmpl_var field -->
+			 </a>
+			 
+			 <!-- tmpl_else -->
+ 	 	    <a 
+ 				href="#"
+ 				class="current"
+ 			>	
+ 				Profile Fields
+ 			</a>
+			<!-- /tmpl_if -->
+			
+			
+		</nav>
+	</div>
+	<div class="medium-2 large-3 columns text-right">
+	   <!-- tmpl_include help_link_widget.tmpl -->
+	</div>
 </div>
+
+
 
 <div id="profile_fields"></div>
 
